@@ -1,3 +1,5 @@
+- Fix media source path being included for empty values [#152]
+
 ClientConfig 2.1.0-pl
 ---------------------
 Released on 2018-12-05
